tests/shouldFail/main.tex
\documentclass{article}
\begin{document}
\asdf
% Hello
\end{document}
